// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownTransition render slots correctly 1`] = `
<div
  class="box"
  name="dropdown"
>
  <p>
    Ethereum
  </p>
</div>
`;

exports[`DropdownTransition render transition after enter 1`] = `
<div
  name="dropdown"
/>
`;
